# palettum

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Cross.toml  Dockerfile  README.md  build-wasm.sh  docker-compose.yml  library.h  nginx.conf  requirements.txt  run.py  setup.py  test.json
.cross/aarch64-unknown-linux-gnu/: Dockerfile
.cross/riscv64gc-unknown-linux-gnu/: Dockerfile
.cross/x86_64-unknown-linux-gnu/: Dockerfile
.github/ISSUE_TEMPLATE/: api-bug.yml  config.yml  core-bug.yml  frontend-bug.yml  general-bug.yml
.github/workflows/: api_test.yml  build-cli.yml  build.yml  clang-format-check.yml  code-quality.yml  core_cpp_test.yml  core_publish.yml  core_python_test.yml  cpp_test.yml  format.yml  publish.yml  python_test.yml  release-cli.yml  test.yml
app/: __init__.py  routes.py
apps/api/: .dockerignore  .env.example  Dockerfile  requirements.txt
apps/api/app/: __init__.py  auth.py  routes.py
apps/api/tests/: conftest.py  test_routes.py
apps/api/tests/test_palettes/: default.txt
apps/core/: CMakeLists.txt  CMakePresets.json  requirements.txt  setup.py  vcpkg.json
apps/core/include/: color.h  color_difference.h  config.h  image.h  math.hpp  palettum.h  processor.h  simd_math.h  stb_image.h  stb_image_write.h
apps/core/include/color/: delta_e.h  lab.h  rgb.h  simd_detect.h
apps/core/include/image/: fpng.h  gif.h  image.h
apps/core/src/: CMakeLists.txt  bindings.cpp  cli.py  color.cpp  image.cpp  palettum.cpp  processor.cpp
apps/core/src/color/: delta_e.cpp  lab.cpp  rgb.cpp
apps/core/src/color_difference/: ciede2000.cpp
apps/core/src/image/: fpng.cpp  gif.cpp  image.cpp
apps/core/src/palettum/: cli.py
apps/core/tests/cpp/: CMakeLists.txt  palettum_test.cpp
apps/core/tests/python/: palettum_test.py
apps/core_rs/: Cargo.toml
apps/core_rs/palettum/: Cargo.toml
apps/core_rs/palettum-cli/: Cargo.toml
apps/core_rs/palettum-cli/src/: lib.rs  main.rs  style.rs
apps/core_rs/palettum-cli/src/cli/: args.rs  runner.rs
apps/core_rs/palettum-cli/src/tui/: mod.rs  ui.rs
apps/core_rs/palettum/src/: cache.rs  color.rs  config.rs  delta_e.rs  error.rs  gif.rs  image.rs  lib.rs  lut.rs  processing.rs  utils.rs  validation.rs  wasm.rs  wasm_api.rs
apps/core_rs/palettum/tests/: integration_test.rs
apps/core_rs/src/: color.rs  lib.rs
apps/core_rs/src/color/: lab.rs  rgb.rs
apps/frontend/: .env.example  Dockerfile  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/frontend/public/: site.webmanifest
apps/frontend/src/: App.css  App.tsx  index.css
apps/frontend/src/components/: AdjustmentsAccordion.tsx  Dropzone.css  (+13 more)
cli/: Cargo.toml
cli/src/: lib.rs  logger.rs  main.rs  profiler.rs  style.rs
cli/src/cli/: args.rs  runner.rs
cli/src/tui/: ui.rs
core/: Cargo.toml
core/src/: color.rs  color_difference.rs  config.rs  dithered.rs  error.rs  gif.rs  ico.rs  image.rs  lib.rs  math.rs  palettized.rs  processing.rs  smoothed.rs
core/src/gpu/: compute.rs  context.rs  mod.rs  render.rs  render_.rs  shader_loader.rs  utils.rs
core/src/gpu/shaders/: blit.wgsl  color_fs.wgsl  common.wgsl  fs_original.wgsl  fs_palettized.wgsl  fs_smoothed.wgsl  fs_video.wgsl  fullscreen.vert.wgsl  grayscale_fs.wgsl  palettized.wgsl  palettized_fs.wgsl  present_vs.wgsl  quad_vs.wgsl  smoothed.wgsl  smoothed_fs.wgsl  vertex.wgsl
core/src/gpu/shaders/resize/: lanczos.wgsl  lanczos_horizontal.wgsl  lanczos_vertical.wgsl  nearest.wgsl  nearest_horizontal.wgsl  nearest_vertical.wgsl  triangle.wgsl  triangle_horizontal.wgsl  triangle_vertical.wgsl
core/src/media/: gif.rs  ico.rs  image.rs  media.rs  mod.rs  video.rs
core/src/palette/: extraction.rs  io.rs  mod.rs
core/tests/: integration_test.rs
include/: palettum.h
palettes/: Dracula.json  Nord.json  Tokyo Night.json  Tokyo-Night.json  catppuccin-mocha.json  catppuccin.json  gruvbox.json  nes.json  nord.json  rplace-2023.json  rplace-22.json  tokyo-night.json
rs/cli/: Cargo.toml
rs/cli/_src/: lib.rs  style.rs
rs/cli/_src/cli/: args.rs
rs/cli/_src/tui/: event.rs
rs/cli/src/: lib.rs  logger.rs
rs/cli/src/cli/: args.rs  runner.rs
rs/core/: Cargo.toml
rs/core/src/: config.rs  errors.rs  gif.rs  image.rs  lib.rs  palettized.rs  processing.rs  smoothed.rs  utils.rs
rs/core/tests/: integration_test.rs
rs/wasm/: Cargo.toml
rs/wasm/src/: lib.rs
src/: CMakeLists.txt  bindings.cpp  palettum.cpp
tests/: CMakeLists.txt  conftest.py  palettum_test.cpp  test_routes.py
tests/cpp/: CMakeLists.txt  palettum_test.cpp
tests/python/: palettum_test.py
tests/test_images/: invalid.txt
tests/test_palettes/: invalid.txt  range.txt
wasm/: Cargo.toml
wasm/src/: lib.rs  utils.rs
web/: .firebaserc  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
web/patches/: libavjs-webcodecs-bridge@0.3.2.patch  libavjs-webcodecs-polyfill@0.5.3.patch
web/src/: App.tsx  ShaderContext.tsx  index.css  main.tsx  wasm-detect.ts  worker.js  worker.ts
web/src/components/: AdjustmentsAccordion.tsx  CanvasPreview.tsx  CanvasViewer.tsx  DarkModeToggle.tsx  Footer.tsx  ImageDimensions.tsx  ImageUpload.tsx  ImageViewer.tsx  PaletteEditor.tsx  PaletteManager.tsx  PalettifyImage.tsx  SharedImagePreview.tsx  footer.tsx
web/src/hooks/: use-color-cycle.ts  use-lock-body-scroll.ts  use-outside-click.ts  use-sync-config-to-worker.ts
web/src/lib/: constants.ts  ffmpeg.worker.ts  mediaProcessor.ts  palettumWorker.ts  transcoder.ts  utils.ts  wasm.ts
web/src/providers/: renderer-provider.tsx
web/src/stores/: config.ts  index.ts  media.ts  palettes.ts
web/src/workers/: extractor.ts  render.ts
web_new/: bun.lockb  package.json  tsconfig.app.json
web_new/src/: App.tsx  index.css  main.tsx  renderer-provider.tsx  store.ts
web_new/src/components/: MediaContainer.tsx  export-button.tsx
web_new/src/hooks/: use-sync-config-to-worker.ts
web_new/src/lib/: utils.ts
web_new/src/providers/: renderer-provider.tsx
web_new/src/workers/: render.ts
(+146 files in other folders)
