[workspace]
members = [
    "rs/core",
    "rs/wasm",
    "rs/cli",
]
resolver = "2"

[workspace.dependencies]
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
log = "0.4"
rayon = "1.10.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
tsify = "0.5.5"
wasm-bindgen = "0.2.100"
serde_json = "1.0"
env_logger = "0.11"
anyhow = "1.0"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
version = "0.5.0"
description = "Tool for recoloring images and GIFs with any palette of your choice"

[profile.release]
lto = "fat"
