[workspace]
members = [
    "core",
    "wasm",
    "cli",
]
resolver = "2"

[workspace.dependencies]
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
log = "0.4"
rayon = "1.10.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
tsify = "0.5.5"
wasm-bindgen = "0.2.100"
serde_json = { version = "1.0", features = ["preserve_order"] }
env_logger = { version = "0.11", default-features = false }
anydir = "0.1.2"
tabled = "0.19.0"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
version = "0.5.1"
description = "Tool for recoloring images and GIFs with any palette of your choice"

[profile.release]
lto = "fat"
strip = "symbols"
panic = "abort"
codegen-units = 1


[profile.int]
inherits = "dev"
opt-level = 3
lto = false
strip = "none"
debug = true

[patch.crates-io]
indicatif = { git = "https://github.com/arrowpc/indicatif.git", branch = "main" }
console   = { git = "https://github.com/arrowpc/console.git", branch = "main" }
