[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "palettum"
path = "src/main.rs"

[dependencies]
palettum = { path = "../core", features = ["cli"] }
clap.workspace = true
log.workspace = true
env_logger.workspace = true
rayon.workspace = true
num_cpus.workspace = true
anydir.workspace = true
tabled.workspace = true
terminal_size = "0.3.0"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
console = "0.15"
anstyle = "1.0"
include_dir = "0.7"
walkdir = "2.5.0"
once_cell = "1.21.3"

# TUI-related dependencies
# ratatui = { version = "0.29.0", features = ["unstable-widget-ref"], optional = true }
# ratatui-image = { version = "5.0.0", optional = true }
# ratatui-explorer = { version = "0.1.4", optional = true }
# crossterm = { version = "0.27.0", optional = true }
# viuer = { version = "0.8.1", optional = true }

[features]
default = []
# tui = ["dep:ratatui", "dep:ratatui-image", "dep:ratatui-explorer", "dep:crossterm", "dep:viuer"]
