[package]
name = "palettum"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
image.workspace = true
log.workspace = true
rayon.workspace = true
thiserror.workspace = true
num_cpus.workspace = true
bon = "3.6.3"
strum_macros = "0.27"
anydir = "0.1.2"

serde = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }

tabled = {workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde_json.workspace = true
include_dir = "0.7"
env_home = "0.1.0"
ico = "0.4.0"
png = "0.17.16"
wgpu = { version = "26.0.1", features = ["webgl"] }
bytemuck = { version = "1.23.0", features = ["derive"] }
futures = "0.3.31"
async-once-cell = "0.5.4"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement", "ImageBitmap", "OffscreenCanvasRenderingContext2d", "ImageData", "OffscreenCanvas"] }
ffmpeg-next = { version = "7.1.0", optional = true, default-features = false, features = [ "format", "codec", "software-scaling", "static", "build-lib-x264", "build-license-gpl"] }
parking_lot = { version = "0.12", optional = true }

[features]
serde = ["dep:serde"]
wasm = ["serde", "dep:wasm-bindgen", "dep:tsify", "image/serde", "dep:parking_lot"]
cli = ["dep:clap", "dep:tabled", "dep:parking_lot"]
video = ["dep:ffmpeg-next"]
