[package]
name = "wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
palettum = { path = "../core", features = ["wasm"] }
image.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
tsify.workspace = true
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2"
web-time = "1.1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-O4",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-simd",
]
