[package]
name = "wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
palettum = { path = "../core", default-features = false, features = ["wasm", "gpu"] }
image.workspace = true
log.workspace = true
wasm-bindgen.workspace = true
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2"
web-time = "1.1.0"
wasm-bindgen-futures = "0.4.50"
once_cell = "1.21.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-O4",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-simd",
]
