[package]
name = "palettum-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "palettum"
path = "src/main.rs"

[dependencies]
palettum = { path = "../core", features = ["cli"] }
clap.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
rayon.workspace = true
thiserror.workspace = true
num_cpus.workspace = true
anydir.workspace = true
directories = "5.0"
terminal_size = "0.3.0"
humantime = "2.1"
humansize = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"
tempfile = "3.10.1"
anstyle = "1.0"
include_dir = "0.7"
tabled = "0.19.0"
walkdir = "2.5.0"

# TUI-related dependencies
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"], optional = true }
ratatui-image = { version = "5.0.0", optional = true }
ratatui-explorer = { version = "0.1.4", optional = true }
crossterm = { version = "0.27.0", optional = true }
viuer = { version = "0.8.1", optional = true }
indicatif-log-bridge = "0.2.3"
once_cell = "1.21.3"

[features]
default = []
tui = ["dep:ratatui", "dep:ratatui-image", "dep:ratatui-explorer", "dep:crossterm", "dep:viuer"]
