[package]
name = "palettum-cli"
version = "0.2.0"
edition = "2021"
description = "Beautiful CLI tool for the palettum image processing library"
license = "AGPL-3.0"

[[bin]]
name = "palettum"
path = "src/main.rs"

[dependencies]
palettum = { path = "../palettum" }
clap = { version = "4.5", features = ["derive", "env"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"], optional = true }
ratatui-image = { version = "5.0.0", optional = true }
ratatui-explorer = { version = "0.1.4", optional = true }
crossterm = { version = "0.27.0", optional = true }
directories = "5.0"
log = "0.4"
env_logger = "0.11"
terminal_size = "0.3.0"
humantime = "2.1"
humansize = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"
rayon = "1.10"
thiserror = "1.0"
num_cpus = "1.16"
viuer = { version = "0.8.1", optional = true }
tempfile = "3.10.1"
anstyle = "1.0"
include_dir = "0.7"
tabled = "0.19.0"
walkdir = "2.5.0"

[features]
default = []
tui = ["dep:ratatui", "dep:ratatui-image", "dep:ratatui-explorer", "dep:crossterm", "dep:viuer"]

